<resources>
    <string name="app_name">AppDrive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="google_maps_key">AIzaSyBYRrNH2zytvjxNW0WpYpYv8aOJ1CXf35E</string>

    <string name="menu_lichSu">Lịch sử</string>
    <string name="menu_ViTaiXe">Ví tài xế</string>
    <string name="menu_HoTro">Hỗ trợ</string>
    <string name="menu_KiemTra">Kiểm tra</string>
    <string name="menu_CaiDat">Cài đặt</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="title_TyLeChapNhan">Tỷ lệ chấp nhận</string>
    <string name="title_DanhGia">Đánh giá</string>
    <string name="title_TyLeHuy">Tỷ lệ hủy</string>
    <string name="map_api_key">AIzaSyA451LieNEW97s8nj6yvePpNnQmpG2LkIY</string>
    <string name="thoi_Gian">1:00</string>
    <string name="diem_Don">Chung cư C3 Man Thiện, Hiệp Phú, Q9, Hồ Chí Minh, Viet Nam</string>
    <string name="diem_Den">Chợ Bến Thành, Lê Lợi, Bến Thành, Q1, Việt Nam</string>
    <string name="tong_Tien">103.000 VND</string>
    <string name="waZa_Food">WAZA FOOD</string>
    <string name="gioi_Thieu">Mang món ngon đi muôn nơi</string>
    <string name="loi_Moi">Trở thành đối tác của WAZA FOOD để cải thiện cuộc sống của bạn và hơn thế nữa</string>
</resources>
