<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_In"
    android:background="@color/colorGreen4"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/waZa_Food"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/gioi_Thieu"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/loi_Moi"
        android:textColor="@color/colorBlack"
        android:textSize="33sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_dang_nhap"
            android:text="Đăng nhập"
            android:textSize="27sp"
            android:id="@+id/btnDangNhap"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_dang_ky"
            android:text="Đăng ký"
            android:textSize="27sp"
            android:id="@+id/btnDangKy"/>
</LinearLayout>