<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NhanCuocXe_Activity"
    android:orientation="vertical"
    android:background="@color/colorGray_31">
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tong_Tien"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="GrabFood"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:text="3.0km"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:background="@color/colorGray91"/>
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:text="Cash"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:background="@color/colorGray91"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTom_Tat_Diem_Don"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="Chung cư C3 Man Thiện Hiệp Phú Q9"
                    android:textSize="30sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/txtChi_Tiet_Diem_Don"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/diem_Don"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTom_Tat_Diem_Den"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="Chợ Bến Thành Lê Lợi Q1"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:background="@color/colorGray91"/>
                <TextView
                    android:id="@+id/txtChi_Tiet_Diem_Den"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/diem_Den"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@color/colorGray91"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/dem"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:background="@color/colorGreen4"
            android:text="@string/thoi_Gian"
            android:textSize="30sp"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnNhan_Cuoc"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorGreen4"
            android:text="Acception"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>